[package]
name = "iris"
version = "0.1.0"
edition = "2018"
publish = false

[features]
default = []

[dependencies]
chrono = "0.4.19"
log = "0.4.14"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.66"
thiserror = "1.0.26"
tracing = "0.1.26"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.20"

[dev-dependencies]
crossbeam = "0.8.1"
regex = "1.5.4"
